# rest-by-django1

./: README.md  pyproject.toml
.github/workflows/: CI.yml  blank.yml
pyprg/: asgi.py  settings.py  urls.py  wsgi.py
pyprg/core/: apps.py
