[tool.poetry]
name = "rest-by-django1"
version = "0.1.0"
description = ""
authors = ["Jorge Luiz Plautz <jorge.plautz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
flake8 = "^5.0.4"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = ["core/tests",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
